test/errors/template.004.tmpl
<div
    <TMPL_UNLESS condition>
        id="a"
    </TMPL_IF>
>
</div>
